--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+@import "../scss/theme";
+
+
+/*@import "../plugins/font-awesome/css/all.min.css";
+@import "../plugins/lightbox/css/lightbox.min.css";
+@import "../plugins/flickity/flickity.min.css";
+*/
