--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -17,9 +17,9 @@
   <title> Renaissance </title>
 
   <!-- CSS Plugins -->
-  <link rel="stylesheet" href="../../assets/plugins/font-awesome/css/all.min.css">
-  <link rel="stylesheet" href="../../assets/plugins/lightbox/css/lightbox.min.css">
-  <link rel="stylesheet" href="../../assets/plugins/flickity/flickity.min.css">
+  <link rel="stylesheet" href="assets/plugins/font-awesome/css/all.min.css">
+  <link rel="stylesheet" href="assets/plugins/lightbox/css/lightbox.min.css">
+  <link rel="stylesheet" href="assets/plugins/flickity/flickity.min.css">
 
   <!-- CSS Global -->
   <!-- build:css assets/css/theme.min.css -->
@@ -27,13 +27,11 @@
   <!-- endbuild -->
 
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </head>
   <body>
@@ -107,14 +105,12 @@
           <div class="col">
 
             <!-- Heading -->
-            <h2 class="section__preheading section_welcome__preheading text-center text-muted">
-              <span class="text-primary">Café</span> / Restaurant
-            </h2>
             <h1 class="section__heading section_welcome__heading text-center">
-              Touché
+              Renaissance
             </h1>
             <p class="section__subheading section_welcome__subheading text-center text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illo, alias animi iusto neque, sint corrupti? Laudantium, dignissimos id excepturi facilis, facere saepe quasi placeat praesentium ipsa sapiente illo molestiae?
+              Chez Renaissance nous avons sélectionné pour vous des lieux authentiques avec des activités uniques. Toute l’année nous vous proposons un panel d’activités éphémères ou en continu !
+              Notre objectif est d’ouvrir le patrimoine Français au plus grand nombre ainsi que de permettre le maintien en état de ces endroits qui font la richesse de notre patrimoine.
             </p>
 
             <!-- Button -->
@@ -1624,7 +1620,7 @@
 
   <!-- JS Global -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="../../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnKt8_N4-FKOnhI_pSaDL7g_g-XI1-R9E"></script>
 
   <!-- JS Plugins -->
