minor errors fixed

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -96,7 +96,7 @@
 
   <!-- WELCOME
   ================================================== -->
-  <section class="section section_welcome" data-parallax="scroll" data-image-src="assets/img/1.jpg">
+  <section class="section section_welcome" data-parallax="scroll" data-image-src="../../assets/img/1.jpg">
 
     <!-- Content -->
     <div class="section_welcome__main">
