Including text and more images

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -96,7 +96,7 @@
 
   <!-- WELCOME
   ================================================== -->
-  <section class="section section_welcome" data-parallax="scroll" data-image-src="../../assets/img/1.jpg">
+  <section class="section section_welcome" data-parallax="scroll" data-image-src="assets/img/1.jpg">
 
     <!-- Content -->
     <div class="section_welcome__main">
@@ -112,13 +112,6 @@
               Chez Renaissance nous avons sélectionné pour vous des lieux authentiques avec des activités uniques. Toute l’année nous vous proposons un panel d’activités éphémères ou en continu !
               Notre objectif est d’ouvrir le patrimoine Français au plus grand nombre ainsi que de permettre le maintien en état de ces endroits qui font la richesse de notre patrimoine.
             </p>
-
-            <!-- Button -->
-            <div class="text-center">
-              <a href="#section_reservation" class="btn btn-primary text-white">
-                Make reservation
-              </a>
-            </div>
 
           </div>
         </div> <!-- / .row -->
@@ -169,12 +162,14 @@
   ================================================== -->
   <section class="section section_discover section_no-padding_bottom">
     <div class="container">
+        <h1> Nos activités </h1>
       <div class="row">
         <div class="col-md-2 align-self-start">
 
           <!-- Description -->
           <p class="section_discover__description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            <h4> Escape Vaugien </h4>
+            1 allee du Domaine de Vaugien, 78470 Saint-Remy-les-Chevreuse, France
           </p>
 
         </div>
@@ -182,16 +177,16 @@
 
           <!-- Image -->
           <div class="section_discover__img">
-            <img src="/assets/images/img/2.jpg" class="img-fluid" alt="...">
+            <img src="/assets/img/2.png" class="img-fluid" alt="...">
           </div>
 
         </div>
         <div class="col-md-6 align-self-center">
 
           <!-- Content -->
-          <h2><em>Lorem ipsum</em> dolor sit amet</h2>
+          <h2> <em> L'escape game du Domain de Vaugien </em></h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veritatis nisi, consequatur, laborum libero a neque ducimus. Porro rem illum quo nostrum quisquam asperiores, blanditiis, consectetur. Possimus facilis velit, voluptatibus!
+            Enfermé dans une pièce secrète du château de Vaugien, partez à la chasse aux indices et résolvez les différentes énigmes pour vous échapper à temps de la chambre des mystères.
           </p>
 
         </div>
@@ -208,7 +203,8 @@
 
           <!-- Description -->
           <p class="section_discover__description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            <h4> Chasse au trésor  </h4>
+            1 allee du Domaine de Vaugien, 78470 Saint-Remy-les-Chevreuse, France
           </p>
 
         </div>
@@ -216,16 +212,18 @@
 
           <!-- Image -->
           <div class="section_discover__img alt">
-            <img src="assets/img/7.jpg" class="img-fluid" alt="...">
+            <img src="assets/img/7.png" class="img-fluid" alt="...">
           </div>
 
         </div>
         <div class="col-md-6 order-md-1 align-self-center">
 
           <!-- Content -->
-          <h2><em>Velit ipsa</em> quidem debitis amet</h2>
+          <h2><em> Chasse au trésor dans le Château de Chazeron </em></h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam quae similique asperiores consequatur! Nihil temporibus qui enim, ab voluptates corporis commodi eum maxime. Accusamus voluptates a, et quidem! Quo, et?
+            Le jeu se déroule dans l'enceinte du château, six énigmes sont à résoudre sur une durée d'une heure trente maximum.
+            Une seule épreuve est entièrement extérieure, toutes les autres peuvent se faire à couvert.
+            Cinq équipes costumées de dix personnes s'affrontent sous l'arbitrage d'un maître du jeu.
           </p>
 
         </div>
@@ -329,12 +327,12 @@
 
           <!-- Heading -->
           <h2 class="section__heading text-center">
-            What clients say about us
+            Témoignages de nos clients
           </h2>
 
           <!-- Subheading -->
           <p class="section__subheading text-center">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            La relation avec chacun de nos clients est importante. Nous mettons tout en œuvre pour apporter entière satisfaction à chaque étape du développement de la solution. Notre but est d’établir une relation pérenne et durable.
           </p>
 
         </div>
@@ -348,7 +346,7 @@
 
                   <!-- Photo -->
                   <div class="section_testimonials__photo">
-                    <img src="assets/img/20.jpg" class="img-fluid" alt="...">
+                    <img src="assets/img/20.png" class="img-fluid" alt="...">
                   </div>
 
                 </div>
@@ -356,11 +354,16 @@
 
                   <!-- Blockquote -->
                   <blockquote class="section_testimonials__blockquote mx-auto">
+                    <h3> Fabuleux </h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos at veritatis vitae modi ex quis quibusdam error repudiandae adipisci dolore perspiciatis iste, vel fuga a, libero architecto ratione deleniti sequi.
+                      Superbe expérience en famille.
+                      Nous étions douze et avons tous adoré, de 10 ans à ....la cinquantaine :-)
+                      Grande gentillesse des propriétaires. Le scénario est très bien ficelé et très immersif : le lieu (pénombre, fraîcheur, décor...), les costumes...
+                      Petit plus : des aides par message vocal pour éviter de bloquer, pendant le jeu, bienvenues dans notre grand groupe de débutants.
+                      A recommander, c'était TRES bien.
                     </p>
                     <footer class="text-muted">
-                      Richard Roe
+                      Jean-Pierre
                     </footer>
                   </blockquote>
 
@@ -374,7 +377,7 @@
 
                   <!-- Photo -->
                   <div class="section_testimonials__photo">
-                    <img src="assets/img/21.jpg" class="img-fluid" alt="...">
+                    <img src="assets/img/21.png" class="img-fluid" alt="...">
                   </div>
 
                 </div>
@@ -382,8 +385,9 @@
 
                   <!-- Blockquote -->
                   <blockquote class="section_testimonials__blockquote mx-auto">
+                    <h3> Excellentissime </h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos at veritatis vitae modi ex quis quibusdam error repudiandae adipisci dolore perspiciatis iste, vel fuga a, libero architecto ratione deleniti sequi.
+                      Pour animer les sombres dimanches après midis de novembre, emmenez vos enfants faire ce formidable escape game! Nous avions 4 enfants (de 9 à 13 ans) + un adulte de 18 ans + nous les parents/tonton/tata. Ils se sont éclatés! Les plus petits étaient positivement effrayés (je veux dire en rigolant en même temps!) et le jeu les a passionnés. En rentrant dans la voiture le plus petit a dit « on en a de la chance d’avoir un tonton et une tata aussi gentils! ». Et les parents nous ont rapporté qu’ils avaient adoré ! 
                     </p>
                     <footer class="text-muted">
                       Elisabeth Doe
@@ -400,7 +404,7 @@
 
                   <!-- Photo -->
                   <div class="section_testimonials__photo">
-                    <img src="assets/img/22.jpg" class="img-fluid" alt="...">
+                    <img src="assets/img/22.png" class="img-fluid" alt="...">
                   </div>
 
                 </div>
@@ -408,8 +412,9 @@
 
                   <!-- Blockquote -->
                   <blockquote class="section_testimonials__blockquote mx-auto">
+                    <h3> Une grande première </h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos at veritatis vitae modi ex quis quibusdam error repudiandae adipisci dolore perspiciatis iste, vel fuga a, libero architecto ratione deleniti sequi.
+                      Premier escape game pour la plupart d'entre nous. 2 enfants 7 et 10 ans, 2 adultes et 2 séniors. Des l entree avec le portail blanc qui grince nous entrons dans l atmosphere. Puis la mise.en tenue de.bagnards et les explications de la maitresse de maison. Le déroulé, les caches les énigmes sont très bien travaillés. Et l'heure est passée très voir trop vite. Bravo pour le scénario et la qualité de la demeure qui contribue à rendre cet escape excellent. Merci pour l accueil.
                     </p>
                     <footer class="text-muted">
                       Monica Roe
@@ -437,12 +442,12 @@
 
           <!-- Heading -->
           <h2 class="section__heading text-center">
-            Upcoming events
+            Évènements à venir
           </h2>
 
           <!-- Subheading -->
           <p class="section__subheading text-center">
-            Commodi rem veritatis quis eaque mollitia.
+            Découvrez les prochains événements
           </p>
 
         </div>
