--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -50,8 +50,7 @@
 
         <!-- Navbar: Brand -->
         <a class="navbar-brand d-none d-lg-flex" href="index.html">
-          Renaissance
-          <!-- favicon-all/crown.png -->
+          <img src="/assets/favicon-all/crown-w.png" class="img-fluid" alt="...">
         </a>
 
         <!-- Navbar navigation: Right -->
@@ -122,7 +121,7 @@
 
             <!-- Address -->
             <div class="section_welcome__footer__address text-center text-lg-right">
-              <i class="fas fa-map-marker-alt"></i> 1234 Altschul, New York, NY 10027-0000
+              <i class="fas fa-map-marker-alt"></i> 2 Rue de Blois, 36600 Valençay, France
             </div>
 
           </div>
